[tool.mypy]
ignore_missing_imports = true
exclude = [
    ".venv",
    "docs"
]

[tool.isort]
profile = "black"

[tool.poetry]
name = "git-actions-test-python"
version = "1.0.0"
description = "Test project for a Python CI using Github Actions"
authors = ["Anthony Seager <Anthony@seager.com.au>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sphinx = "^7.3.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"